<resources>
    <string name="app_name">OE Scanner</string>
    <string name="mobile_coroscan">OE Scanner</string>
    <string name="scan">Scan</string>
    <string name="share">Share</string>
    <string name="add_new">Add New</string>
    <string name="map_image">map_image</string>
    <string name="standby_mode">Standby Mode</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="report">Report</string>
    <string name="report_new_case">Report New Case</string>
    <string name="discover">Discover</string>
    <string name="please_wait">Please wait...</string>
</resources>
