<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnHolder"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_new_case"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:divider="@drawable/space"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/report"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </RelativeLayout>
</layout>